variables en javascript

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>ejercicio</h1>
-    <p id="variable">nuestra variable:</p>
+    <p id="var-Texto">variable tipo Texto:</p>
+    <br>
+    <p id="var-Entera">variable tipo Entera:</p>
+    <br>
+    <p id="var-Boleano">variable tipo Boleano:</p>
     <script src="./codigo.js"></script>
 </body>
 </html>
